aboutme-website/aboutme-website-stack.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aboutme

# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: aboutme-cert
#   namespace: aboutme
# spec:
#   secretName: aboutme-tls-secret
#   issuerRef:
#     name: selfsigned-issuer
#     kind: ClusterIssuer
#   dnsNames:
#     - nejlikka.com
#       www.nejlikka.com
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-aboutme
  namespace: aboutme
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-le-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: www.nejlikka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-aboutme
                port:
                  number: 80
    - host: nejlikka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-aboutme
                port:
                  number: 80
  tls:
    - hosts:
        - nejlikka.com
        - www.nejlikka.com
      secretName: aboutme-cert

---
apiVersion: v1
kind: Service
metadata:
  name: svc-aboutme
  namespace: aboutme
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: aboutme

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-aboutme
  namespace: aboutme
spec:
  selector:
    matchLabels:
      app: aboutme
  replicas: 3
  template:
    metadata:
      labels:
        app: aboutme
    spec:
      containers:
        - name: nginx-aboutme
          image: pontusc/aboutme:latest
          ports:
            - containerPort: 80
